Fix/radio and button group (#128)
* fix(radio): solve different issues
- position with long content
- size in small space
ticket: OV-37114

* fix(buttonGroup): solve issue with icon on small size.
ticket: OV-37107

--- a/packages/Radio/src/radio.scss
+++ b/packages/Radio/src/radio.scss
@@ -38,11 +38,7 @@
 
 .ids-form-control {
   display: inline-flex;
-  align-items: center;
-
-  &.has-description {
-    align-items: flex-start;
-  }
+  align-items: flex-start;
 }
 
 .ids-radio__label {
@@ -57,7 +53,8 @@
   appearance: none;
   height: var(--ids-radio-size);
   width: var(--ids-radio-size);
-  margin: 0;
+  flex-shrink: 0;
+  margin: 2px 0 0;
   display: inline-block;
   position: relative;
   cursor: pointer;
